--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: phil wells
-email: philwells@thephilwells.com
-description: Phil Wells is a computer programmer who's built and tested web stuff for New York Times, Kaplan Test Prep, and Rethink. He's also the author of Dudesong, Try The Veal, and lots of rhyming poems.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+email: philwells5000@gmail.com
+description: Phil Wells is a computer programmer who's built and tested web stuff for Epic Games, New York Times, Kaplan Test Prep, and Rethink. He's also the author of Dudesong, Try The Veal, and lots of rhyming poems.
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://thephilwells.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: thephilwells
 github_username:  thephilwells
 
