--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -16,5 +16,6 @@ jobs:
       with:
         ruby-version: '3.2'
         bundler-cache: true
+        bundler: '2.6.8'  # Specify the bundler version
     - name: Build the site
       run: bundle exec jekyll build --future
