build closer to how i do it on local

--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -27,7 +27,9 @@ jobs:
         bundle config set --local path 'vendor/bundle'
         bundle install
     - name: Build the site
-      run: bundle exec jekyll build --future
+      env:
+        JEKYLL_ENV: production
+      run: bundle exec jekyll build
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
