add and configure google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,15 @@ github_username:  thephilwells
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-analytics
+      GoogleAnalytics:          # Add, if you want to track with Google Analytics
+        id: G-JQNN4HKSW5          # Required - replace with your tracking id
+        anonymizeIp: false
 
+jekyll-analytics
+  GoogleAnalytics:          # Add, if you want to track with Google Analytics
+    id: G-JQNN4HKSW5          # Required - replace with your tracking id
+    anonymizeIp: false
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
