--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,8 @@ github_username:  thephilwells
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-analytics:
-      GoogleAnalytics:          # Add, if you want to track with Google Analytics
-        id: G-JQNN4HKSW5          # Required - replace with your tracking id
-        anonymizeIp: false
+
+google_analytics: G-JQNN4HKSW5
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
